<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_profile_options"
        android:title="@string/options"
        android:icon="@drawable/ic_apps"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/menu_edit_profile"
                android:title="@string/show_profile" />
            <item android:id="@+id/menu_add_training_profile"
                android:title="@string/add_training" />
            <item android:id="@+id/menu_add_competition_profile"
                android:title="@string/add_competition" />
        </menu>
    </item>

    <item android:id="@+id/menu_log_out"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom" />

</menu>