<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_share_competition"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_edit_competition"
        android:title="@string/options"
        android:icon="@drawable/ic_edit"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_new_competition"
        android:title="@string/save"
        android:icon="@drawable/ic_save"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_options_competition"
        android:title="@string/options"
        android:icon="@drawable/ic_menu"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

</menu>