<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/distance_series"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/distance_seriesTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/distance_seriesTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/distance_seriesTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="(m)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDistance"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/distance_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swHurdles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/serie_with_hurdles"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/tvDistance"
        app:layout_constraintTop_toBottomOf="@+id/distance_seriesTextInput" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_series"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/time_seriesTextInput"
        app:layout_constraintStart_toStartOf="@+id/tvDistance"
        app:layout_constraintTop_toTopOf="@+id/time_seriesTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_seriesTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="(xxh mm:ss.ms)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/distance_seriesTextInput"
        app:layout_constraintTop_toBottomOf="@+id/swHurdles">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="00h 00:00.00" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvShoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shoes"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/time_seriesTextInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/time_seriesTextInput" />

    <RadioGroup
        android:id="@+id/radioGroupShoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/time_seriesTextInput"
        app:layout_constraintStart_toStartOf="@+id/tvShoes"
        app:layout_constraintTop_toBottomOf="@+id/tvShoes">

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal_shoe"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

        <RadioButton
            android:id="@+id/radio_flying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flying_shoe"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

        <RadioButton
            android:id="@+id/radio_spikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spike_shoe"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>